--- a/resources/config.ini
+++ b/resources/config.ini
@@ -1,8 +1,232 @@
-# Track only transactions whose scopes involve the listed accounts. Default is to track all transactions. (eosio::account_history_plugin)
-# filter_on_accounts = 
 
-# Limits the maximum time (in milliseconds) processing a single get_transactions call. (eosio::account_history_plugin)
-get-transactions-time-limit = 3
+# /mnt/c/Workspaces/EOS/eos/build/programs/nodeos/nodeos -h
+# Application Options:
+
+# Config Options for eosio::bnet_plugin:
+#   --bnet-endpoint arg (=0.0.0.0:4321)   the endpoint upon which to listen for
+#                                         incoming connections
+#   --bnet-threads arg                    the number of threads to use to process
+#                                         network messages
+#   --bnet-connect arg                    remote endpoint of other node to
+#                                         connect to# Use multiple bnet-connect
+#                                         options as needed to compose a network
+#   --bnet-no-trx                         this peer will request no pending
+#                                         transactions from other nodes
+
+# Config Options for eosio::chain_plugin:
+#   --blocks-dir arg (="blocks")          the location of the blocks directory
+#                                         (absolute path or relative to
+#                                         application data dir)
+#   --checkpoint arg                      Pairs of [BLOCK_NUM,BLOCK_ID] that
+#                                         should be enforced as checkpoints.
+#   --wasm-runtime wavm/binaryen          Override default WASM runtime
+#   --chain-state-db-size-mb arg (=1024)  Maximum size (in MB) of the chain state
+#                                         database
+#   --reversible-blocks-db-size-mb arg (=340)
+#                                         Maximum size (in MB) of the reversible
+#                                         blocks database
+#   --contracts-console                   print contract's output to console
+#   --actor-whitelist arg                 Account added to actor whitelist (may
+#                                         specify multiple times)
+#   --actor-blacklist arg                 Account added to actor blacklist (may
+#                                         specify multiple times)
+#   --contract-whitelist arg              Contract account added to contract
+#                                         whitelist (may specify multiple times)
+#   --contract-blacklist arg              Contract account added to contract
+#                                         blacklist (may specify multiple times)
+
+# Command Line Options for eosio::chain_plugin:
+#   --genesis-json arg                    File to read Genesis State from
+#   --genesis-timestamp arg               override the initial timestamp in the
+#                                         Genesis State file
+#   --print-genesis-json                  extract genesis_state from blocks.log
+#                                         as JSON, print to console, and exit
+#   --extract-genesis-json arg            extract genesis_state from blocks.log
+#                                         as JSON, write into specified file, and
+#                                         exit
+#   --fix-reversible-blocks               recovers reversible block database if
+#                                         that database is in a bad state
+#   --force-all-checks                    do not skip any checks that can be
+#                                         skipped while replaying irreversible
+#                                         blocks
+#   --replay-blockchain                   clear chain state database and replay
+#                                         all blocks
+#   --hard-replay-blockchain              clear chain state database, recover as
+#                                         many blocks as possible from the block
+#                                         log, and then replay those blocks
+#   --delete-all-blocks                   clear chain state database and block
+#                                         log
+#   --truncate-at-block arg (=0)          stop hard replay / block log recovery
+#                                         at this block number (if set to
+#                                         non-zero number)
+
+# Config Options for eosio::history_plugin:
+#   -f [ --filter-on ] arg                Track actions which match
+#                                         receiver:action:actor. Actor may be
+#                                         blank to include all. Receiver and
+#                                         Action may not be blank.
+
+# Config Options for eosio::http_client_plugin:
+#   --https-client-root-cert arg          PEM encoded trusted root certificate
+#                                         (or path to file containing one) used
+#                                         to validate any TLS connections made.
+#                                         (may specify multiple times)
+
+#   --https-client-validate-peers arg (=1)
+#                                         true: validate that the peer
+#                                         certificates are valid and trusted,
+#                                         false: ignore cert errors
+
+# Config Options for eosio::http_plugin:
+#   --http-server-address arg (=127.0.0.1:8888)
+#                                         The local IP and port to listen for
+#                                         incoming http connections# set blank to
+#                                         disable.
+#   --https-server-address arg            The local IP and port to listen for
+#                                         incoming https connections# leave blank
+#                                         to disable.
+#   --https-certificate-chain-file arg    Filename with the certificate chain to
+#                                         present on https connections. PEM
+#                                         format. Required for https.
+#   --https-private-key-file arg          Filename with https private key in PEM
+#                                         format. Required for https
+#   --access-control-allow-origin arg     Specify the Access-Control-Allow-Origin
+#                                         to be returned on each request.
+#   --access-control-allow-headers arg    Specify the Access-Control-Allow-Header
+#                                         s to be returned on each request.
+#   --access-control-max-age arg          Specify the Access-Control-Max-Age to
+#                                         be returned on each request.
+#   --access-control-allow-credentials    Specify if Access-Control-Allow-Credent
+#                                         ials: true should be returned on each
+#                                         request.
+
+# Config Options for eosio::net_plugin:
+#   --p2p-listen-endpoint arg (=0.0.0.0:9876)
+#                                         The actual host:port used to listen for
+#                                         incoming p2p connections.
+#   --p2p-server-address arg              An externally accessible host:port for
+#                                         identifying this node. Defaults to
+#                                         p2p-listen-endpoint.
+#   --p2p-peer-address arg                The public endpoint of a peer node to
+#                                         connect to. Use multiple
+#                                         p2p-peer-address options as needed to
+#                                         compose a network.
+#   --p2p-max-nodes-per-host arg (=1)     Maximum number of client0nodes from any
+#                                         single IP address
+#   --agent-name arg (="EOS Test Agent")  The name supplied to identify this node
+#                                         amongst the peers.
+#   --allowed-connection arg (=any)       Can be 'any' or 'producers' or
+#                                         'specified' or 'none'. If 'specified',
+#                                         peer-key must be specified at least
+#                                         once. If only 'producers', peer-key is
+#                                         not required. 'producers' and
+#                                         'specified' may be combined.
+#   --peer-key arg                        Optional public key of peer allowed to
+#                                         connect.  May be used multiple times.
+#   --peer-private-key arg                Tuple of [PublicKey, WIF private key]
+#                                         (may specify multiple times)
+#   --max-clients arg (=25)               Maximum number of clients from which
+#                                         connections are accepted, use 0 for no
+#                                         limit
+#   --connection-cleanup-period arg (=30) number of seconds to wait before
+#                                         cleaning up dead connections
+#   --network-version-match arg (=0)      True to require exact match of peer
+#                                         network version.
+#   --sync-fetch-span arg (=100)          number of blocks to retrieve in a chunk
+#                                         from any individual peer during
+#                                         synchronization
+#   --max-implicit-request arg (=1500)    maximum sizes of transaction or block
+#                                         messages that are sent without first
+#                                         sending a notice
+
+# Config Options for eosio::producer_plugin:
+
+#   -e [ --enable-stale-production ]      Enable block production, even if the
+#                                         chain is stale.
+#   -x [ --pause-on-startup ]             Start this node in a state where
+#                                         production is paused
+#   --max-transaction-time arg (=30)      Limits the maximum time (in
+#                                         milliseconds) that is allowed a pushed
+#                                         transaction's code to execute before
+#                                         being considered invalid
+#   --max-irreversible-block-age arg (=-1)
+#                                         Limits the maximum age (in seconds) of
+#                                         the DPOS Irreversible Block for a chain
+#                                         this node will produce blocks on (use
+#                                         negative value to indicate unlimited)
+#   -p [ --producer-name ] arg            ID of producer controlled by this node
+#                                         (e.g. inita# may specify multiple
+#                                         times)
+#   --private-key arg                     (DEPRECATED - Use signature-provider
+#                                         instead) Tuple of [public key, WIF
+#                                         private key] (may specify multiple
+#                                         times)
+#   --signature-provider arg (=EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV=KEY:5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3)
+#                                         Key=Value pairs in the form
+#                                         <public-key>=<provider-spec>
+#                                         Where:
+#                                            <public-key>    is a string form of
+#                                                            a vaild EOSIO public
+#                                                            key
+
+#                                            <provider-spec> is a string in the
+#                                                            form <provider-type>
+#                                                            :<data>
+
+#                                            <provider-type> is KEY, or KEOSD
+
+#                                            KEY:<data>      is a string form of
+#                                                            a valid EOSIO
+#                                                            private key which
+#                                                            maps to the provided
+#                                                            public key
+
+#                                            KEOSD:<data>    is the URL where
+#                                                            keosd is available
+#                                                            and the approptiate
+#                                                            wallet(s) are
+#                                                            unlocked
+#   --keosd-provider-timeout arg (=5)     Limits the maximum time (in
+#                                         milliseconds) that is allowd for
+#                                         sending blocks to a keosd provider for
+#                                         signing
+
+# Config Options for eosio::txn_test_gen_plugin:
+#   --txn-reference-block-lag arg (=0)    Lag in number of blocks from the head
+#                                         block when selecting the reference
+#                                         block for transactions (-1 means Last
+#                                         Irreversible Block)
+
+# Config Options for eosio::wallet_plugin:
+#   --wallet-dir arg (=".")               The path of the wallet files (absolute
+#                                         path or relative to application data
+#                                         dir)
+#   --unlock-timeout arg (=900)           Timeout for unlocked wallet in seconds
+#                                         (default 900 (15 minutes)). Wallets
+#                                         will automatically lock after specified
+#                                         number of seconds of inactivity.
+#                                         Activity is defined as any wallet
+#                                         command e.g. list-wallets.
+#   --eosio-key arg                       eosio key that will be imported
+#                                         automatically when a wallet is created.
+
+# Application Config Options:
+#   --plugin arg                          Plugin(s) to enable, may be specified
+#                                         multiple times
+
+# Application Command Line Options:
+#   -h [ --help ]                         Print this help message and exit.
+#   -v [ --version ]                      Print version information.
+#   --print-default-config                Print default configuration template
+#   -d [ --data-dir ] arg                 Directory containing program runtime
+#                                         data
+#   --config-dir arg                      Directory containing configuration
+#                                         files such as config.ini
+#   -c [ --config ] arg (=config.ini)     Configuration file name relative to
+#                                         config-dir
+#   -l [ --logconf ] arg (=logging.json)  Logging configuration file name/path
+#                                         for library users
+
 
 # File to read Genesis State from (eosio::chain_plugin)
 genesis-json = "genesis.json"
@@ -10,35 +234,11 @@ genesis-json = "genesis.json"
 # override the initial timestamp in the Genesis State file (eosio::chain_plugin)
 # genesis-timestamp = 
 
-# the location of the block log (absolute path or relative to application data dir) (eosio::chain_plugin)
-block-log-dir = "blocks"
-
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints. (eosio::chain_plugin)
 # checkpoint = 
 
-# Limits the maximum time (in milliseconds) that a reversible block is allowed to run before being considered invalid (eosio::chain_plugin)
-max-reversible-block-time = -1
-
-# Limits the maximum time (in milliseconds) that is allowed a pushed transaction's code to execute before being considered invalid (eosio::chain_plugin)
-max-pending-transaction-time = -1
-
-# Limits the maximum time (in milliseconds) that is allowed a to push deferred transactions at the start of a block (eosio::chain_plugin)
-max-deferred-transaction-time = 20
-
 # Override default WASM runtime (eosio::chain_plugin)
 # wasm-runtime = 
-
-# Minimum size MB of database shared memory file (eosio::chain_plugin)
-shared-memory-size-mb = 32768
-
-# Time to wait, in milliseconds, between creating next faucet created account. (eosio::faucet_testnet_plugin)
-faucet-create-interval-ms = 1000
-
-# Name to use as creator for faucet created accounts. (eosio::faucet_testnet_plugin)
-faucet-name = faucet
-
-# [public key, WIF private key] for signing for faucet creator account (eosio::faucet_testnet_plugin)
-faucet-private-key = ["EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV","5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3"]
 
 # The local IP and port to listen for incoming http connections; set blank to disable. (eosio::http_plugin)
 http-server-address = 127.0.0.1:8888
@@ -61,12 +261,6 @@ http-server-address = 127.0.0.1:8888
 # Specify if Access-Control-Allow-Credentials: true should be returned on each request. (eosio::http_plugin)
 access-control-allow-credentials = false
 
-# The queue size between nodeos and MongoDB plugin thread. (eosio::mongo_db_plugin)
-mongodb-queue-size = 256
-
-# MongoDB URI connection string, see: https://docs.mongodb.com/master/reference/connection-string/. If not specified then plugin is disabled. Default database 'EOS' is used if not specified in URI. (eosio::mongo_db_plugin)
-# mongodb-uri = 
-
 # The actual host:port used to listen for incoming p2p connections. (eosio::net_plugin)
 p2p-listen-endpoint = 0.0.0.0:9876
 
@@ -88,9 +282,6 @@ allowed-connection = any
 # Tuple of [PublicKey, WIF private key] (may specify multiple times) (eosio::net_plugin)
 # peer-private-key = 
 
-# Log level: one of 'all', 'debug', 'info', 'warn', 'error', or 'off' (eosio::net_plugin)
-log-level-net-plugin = info
-
 # Maximum number of clients from which connections are accepted, use 0 for no limit (eosio::net_plugin)
 max-clients = 25
 
@@ -108,9 +299,6 @@ max-implicit-request = 1500
 
 # Enable block production, even if the chain is stale. (eosio::producer_plugin)
 # enable-stale-production = false
-
-# Percent of producers (0-100) that must be participating in order to produce blocks (eosio::producer_plugin)
-required-participation = 33
 
 # ID of producer controlled by this node (e.g. inita; may specify multiple times) (eosio::producer_plugin)
 # producer-name = 
