--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ env:
   - EOS_BRANCH=v1.3.1 PYTHON_VERSION=3.5.6
   - EOS_BRANCH=v1.3.1 PYTHON_VERSION=3.6.6
   - EOS_BRANCH=v1.3.1 PYTHON_VERSION=3.7.0
-
+  - EOS_BRANCH=v1.4.0 PYTHON_VERSION=3.5.6
+  - EOS_BRANCH=v1.4.0 PYTHON_VERSION=3.6.6
+  - EOS_BRANCH=v1.4.0 PYTHON_VERSION=3.7.0
 
 script:
   - docker build -t tokenika/e2e:${TRAVIS_COMMIT}_${EOS_BRANCH}_${PYTHON_VERSION} --build-arg eos_branch=${EOS_BRANCH} --build-arg eosfactory_branch=${TRAVIS_BRANCH} --build-arg python_version=${PYTHON_VERSION} ./tests/integration/
